--- a/index.html
+++ b/index.html
@@ -37,3 +37,33 @@ h3 {
 
 </body>
 </html>
+
+<p>Early in 1964 the enlightened public of kanhangad and Nileshwar resolved to Honour of the memory of Jawaharlal Nehru, the architect of modern India by undertaking educational and cultural activities in this educationally backward area. In pursuit of this idea, a dedicated and learned team setup in 1966 and educational society known as The Nehru Memorial Education Society under the distinguished presidentship of the late Shri C.K.Nair following which the society was duly registered. The establishment of Nehru Arts and Science College Kanhangad in this backward coastal tract was the major task the society had set before themselves and had subsequently accomplished it</p>
+
+</body>
+</html>
+<html>
+<head>
+<title>nehru</title>
+</head>
+<body>
+
+<hr>
+<h2>Programmes offered.</h2>
+<ul>
+<li>B.A.Economics</li>
+  <li>B.A.History</li>
+  <li>B.Com.</li>
+  <li>B.Sc Mathematics</li>
+  <li>B.Sc Physics</li>
+</ul>
+<h2>Class Timing</h2>
+<ol>
+  <li>09.30-10.30</li>
+  <li>10.30-11.30</li>
+  <li>11.30-12.30</li>
+  <li>13.30-14.30</li>
+  <li>14.30-15.30</li>
+</ol>  
+</body>
+</html>
