--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <head>
 <title>Nehru</title>
 <style>
+ body
+  {
+    background-color:powerblue;
+    width:80%;
+    margin:auto;
+    }
+
+ 
+  
 
 img
 {
