--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ h3 {
   <li>B.Sc Physics</li>
 </ul>
 <h2>Class Timing</h2>
-<ol>
+<ol type="a">
   <li>09.30-10.30</li>
   <li>10.30-11.30</li>
   <li>11.30-12.30</li>
