--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ h3 {
 
 <h1>Nehru Arts and Science College Kanhangad</h1>
 <img src="nehru.jpg" alt="college" height="300" width="500">
-<h3>About us.</h3>
+<h3>About Us</h3>
 
 </body>
 </html>
